@@ -2,4 +2,5 @@
 'extensions/README.retro include
 'extensions/double.retro include
 'extensions/malloc.retro include
+'extensions/termina.retro include
 ~~~
